--- a/mod4_solution/index.html
+++ b/mod4_solution/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <h1>Assignment Solution for Module 4</h1>
+  <p>Hi there,<br>Please open the console to see the output.</p>
 </body>
 
 </html>
