fix: bug in header section of .html file fixed.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <a class="pl-2 font-light font-mono text-sm"
                     href="mod4_solution">mod4_solution</a>
             </article>
+        
+            <article class="flex m-2 items-center">
+                <img src="https://img.icons8.com/color/24/000000/folder-invoices--v1.png" />
+                <a class="pl-2 font-light font-mono text-sm"
+                    href="mod5_solution">mod5_solution</a>
+            </article>
         </section>
 </body>
 </html>
